# PageBinder

./: README.md  pyproject.toml
pagebinder/: __init__.py  cli.py  render.py
