[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pagebinder"
version = "0.1.0"
description = "Render multiple web pages into a single PDF while preserving layout and links."
authors = [
  { name = "PageBinder Contributors" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.41",
  "pypdf>=4.0",
]

[project.optional-dependencies]
cli = []

[project.scripts]
pagebinder = "pagebinder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagebinder"]
